# kursach

./: README.md  alembic.ini  app.py  jest.config.js  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  routs.py  schemas.py  setupTests.js
__tests__/: Admin.test.js  App.test.js  DeleteButton.test.js  ErrorPage.test.js  Home.test.js  Login.test.js  Navbar.test.js  Profile.test.js  ProtectedRoute.test.jsx  Register.test.js  Staff.test.js
alembic/: env.py
alembic/versions/: 408148431362_.py  e78a5fdc1f8f_.py
html/: admin-page.html  edit-teacher.html  edit-user.html  home-page.html  journal-page.html  login-page.html  marks-page.html  register-page.html  statistict.html  teachers-page.html  user-page.html
js/: admin.js  delete-admin.js  delete-user.js  edit-user.js  login.js  logout.js  marks.js  register.js  stats.js  teachers-page.js  user.js
public/: index.html
scss/: home-page.css  home-page.css.map  home-page.min.css  home-page.scss  login-page.css  login-page.css.map  login-page.min.css  login-page.scss  marks-page.css  marks-page.css.map  marks-page.min.css  marks-page.scss  resets.css  resets.css.map  resets.min.css  resets.scss  statistic.css  statistic.min.css  statistic.scss  teachers-list.css  teachers-list.css.map  teachers-list.min.css  teachers-list.scss  user-page.css  user-page.min.css  user-page.scss
src/: App.js  index.js
src/components/: AnimatedPage.jsx  BioInput.js  Button.js  DeleteButton.js  FloatLabel.js  LineChart.js  Navbar.js  (+4 more)
static/: swagger.json
tests/: test_mark.py  test_student.py  test_teacher.py
(+12 files in other folders)
