[tool.poetry]
name = "kursova"
version = "0.1.0"
description = ""
authors = ["Alaska2222 <100542322+Alaska2222@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
aniso8601 = "^9.0.1"
bcrypt = "^4.0.1"
click = "^8.1.3"
colorama = "^0.4.6"
coverage = "^6.5.0"
Flask = "^2.2.2"
Flask-Bcrypt = "^1.0.1"
Flask-HTTPAuth = "^4.7.0"
Flask-Login = "^0.6.2"
flask-marshmallow = "^0.14.0"
Flask-RESTful = "^0.3.9"
flask-swagger-ui = "^4.11.1"
flask-unittest = "^0.1.3"
greenlet = "^2.0.1"
importlib-metadata = "^5.1.0"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.1"
marshmallow = "^3.19.0"
mysql-connector-python = "^8.0.31"
packaging = "^21.3"
PyMySQL = "^1.0.2"
pyparsing = "^3.0.9"
pytz = "^2022.6"
six = "^1.16.0"
SQLAlchemy = "^1.4.44"
Werkzeug = "^2.2.2"
zipp = "^3.11.0"
alembic = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
